Fixed z-index issue

--- a/src/components/home/home.css
+++ b/src/components/home/home.css
@@ -107,11 +107,13 @@
     top: 0;
     height: 100%;
     width: 100%;
+    z-index: -1;
 }
 
 .shape
 {
     position: absolute;
+    z-index: -1;
 }
 
 .s1 {
